<resources>
    <string name="app_name">Ohhh!</string>
    <string name="ok">Ok</string>
    <string name="email">Email</string>
    <string name="search">Search</string>
    <string name="Api_data_not_found">data not found</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="sign_in_or_sign_up">Sign In Or Sign Up</string>
    <string name="home">Home</string>
    <string name="please_wait">Please Wait</string>
    <string name="write_your_review">write your reviews</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
    <string name="Contect_us">Contect Us</string>
    <string name="are_you_sure_you_want_to_exit_the_app">Are you sure you want to exit the app?</string>
    <string name="gues">Continue as a guest</string>
    <string name="terms">Terms and condition</string>

    <string name="Name">Full Name</string>
    <string name="comments">Comments</string>
    <string name="lastName">Last Name</string>
    <string name="Mobile">Mobile</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="gender">GENDER</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="dob">Date of Birth</string>
    <string name="kindly_enter_first_name">Kindly Enter Name</string>
    <string name="kindly_enter_last_name">Kindly Enter Last Name</string>
    <string name="kindly_enter_mobile">Kindly Enter Mobile</string>
    <string name="kindly_enter_dob">Kindly enter Date of Birth</string>
    <string name="kindly_enter_confirm">Kindly Enter Confirm Password</string>
    <string name="kindly_select_terms">Kindly Select Terms and Condition</string>
    <string name="kindly_enter_password">Kindly Enter Password</string>
    <string name="terms_and_condition">Accept Terms and Condition and the details must be as per the Civil Id</string>
    <string name="info_txt">The details must be as per the Civil Id</string>
    <string name="have_you">Have an account?</string>

    <string name="cancel">Cancel</string>


    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="verify_otp">Verify OTP</string>
    <string name="submit">Submit</string>


    <string name="sign_in">Sign In</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="username_hint">Arlene Mccoy</string>
    <string name="password_hint">7089782973</string>
    <string name="sign_up">Sign Up</string>
    <string name="dont_have_an_account">Dont have an account?</string>
    <string name="sign_up_with">Sign up with</string>
    <string name="facebook">FACEBOOK</string>
    <string name="goggle">GOOGLE</string>
    <string name="alredy_have_an_accounnt">Already have an account?</string>
    <string name="login">Login</string>
    <string name="verification_code">  Verification Code</string>
    <string name="please_type_the_verification_code_sent">Please type the verification code sent to prelookstudio@gmail.com</string>
    <string name="i_didnot_receive_a_code">  I didn’t receive a code!</string>
    <string name="please_resend">Please resend</string>
    <string name="thank_you">Thank you!</string>
    <string name="we_have_received_your_order">We have received your order</string>
     <string name="term_and_condition">Terms and Condition</string>
             <string name="termss">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum

</string>
    <string name="saved_address">Saved Address</string>
    <string name="change_password">Change Password</string>
    <string name="current_password">Current Password</string>
    <string name="ppassword">Password</string>
    <string name="cconfirm_password">Confirm Password</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="save">Save</string>

    <string name="account">Account</string>
    <string name="mohammad">Mohammed Al Kandari</string>
    <string name="order_history">Order History</string>
    <string name="push_notification">Push Notification</string>
    <string name="refund_policy">Refund Policy</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="log_out">Logout</string>
    <string name="my_order">My Order</string>
    <string name="ongoing">Ongoing</string>
    <string name="history">History</string>
    <string name="view_order">View Order</string>
    <string name="rate">Rate</string>
    <string name="re_order">Re-order</string>

    <string name="deliver_to">Deliver</string>
    <string name="khaitan">Khaitan, Block 8</string>
    <string name="what_would_you_like"> What would you like</string>

    <string name="shops">Shops</string>

    <string name="find_for_food_or_restaurant">Find for food or restaurant...</string>
    <string name="cart">Cart</string>
    <string name="checkout">Checkout</string>
    <string name="dip_and_dip">Dip N Dip</string>

    <string name="address">Address</string>

    <string name="select_delivery_address">Select Delivery Address</string>

    <string name="work">Work </string>
    <string name="change">Change</string>
    <string name="select_delivery_time">Select Delivery Time</string>

    <string name="now">Now</string>
    <string name="customize">Customize</string>
    <string name="proceed_to_payment">Proceed to payment</string>
    <string name="place_order">Place order</string>
    <string name="payment">Payment</string>
    <string name="cash">Cash</string>
    <string name="card">Card</string>
    <string name="knet">Knet</string>
    <string name="enter_coupon_code">Enter Coupon Code</string>

    <string name="order_info">Order Info</string>
    <string name="add_code">Add Code</string>

    <string name="code">MX225125</string>


    <string name="place_orderr">Place order</string>
    <string name="my_wishlist">My Wishlist</string>

    <string name="cake_details">Brown the beef better. Lean ground beef – I like to use 85% lean angus. Garlic – use fresh  chopped. Spices – chili powder, cumin, onion powder.
</string>

    <string name="size">Size</string>
    <string name="options">Options</string>
    <string name="small">Small</string>
    <string name="medium">Medium</string>
    <string name="large">Large</string>

    <string name="add_to_cart">Add To Cart </string>
    <string name="extra_chesse">Extra Cheese</string>
    <string name="mayonesse">Mayonesse</string>
    <string name="extra_chocolate">Extra Chocolate</string>

    <string name="placed">Placed</string>
    <string name="accepted_by_shops">Accepted by Shops
</string>
    <string name="picked">Picked</string>
    <string name="delivered">Delivered</string>

    <string name="shipping_to">Shipping To
</string>
    <string name="note">Note</string>

    <string name="feed">Feed</string>
    <string name="categories">Categories</string>
    <string name="suncategory">Subcategory</string>
    <string name="my_profile">My Profile</string>
    <string name="area">Area</string>
    <string name="governate">Governate</string>
    <string name="building_no">Building No.</string>
    <string name="block">Block</string>
    <string name="street">street</string>
    <string name="floor_no">floor_no</string>
    <string name="phone">Phone</string>
    <string name="add_address">Add Address</string>





</resources>
