<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/circle_white"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.VerifyActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-99dp"
            android:src="@drawable/circle_big"></ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-46dp"
            android:layout_marginTop="-21dp"
            android:src="@drawable/circle_small">


        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-90dp"

            android:layout_marginRight="-108dp"
            android:src="@drawable/circle_dark"></ImageView>


        <ImageView
            android:id="@+id/back_verification_otp_page_Img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-29dp"
            android:background="@drawable/ic_back_back_otp"
            android:elevation="10dp"></ImageView>


    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:text="@string/verification_code"
        android:fontFamily="@font/semi_bold"
        android:textColor="@color/black"
        android:textSize="30dp"
        android:textStyle="bold">

    </TextView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:fontFamily="@font/semi_bold"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/please_type_the_verification_code_sent">

    </TextView>

    <in.aabhasjindal.otptextview.OtpTextView
        android:id="@+id/otp_view"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="@color/colorPrimary"
        app:bar_active_color="@color/colorPrimary"
        app:bar_height="2dp"
        app:box_margin_right="20dp"
        app:height="70dp"
         app:length="4"
        app:otp_box_background="@drawable/otp_bg_rectangle_white_grey_border"
        app:otp_box_background_active="@drawable/otp_bg_rectangle_white_orange_border"

        app:otp_box_background_success="@drawable/otp_bg_rectangle_white_orange_border"
        app:otp_text_size="30dp"
        app:width="70dp" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:fontFamily="@font/semi_bold"
        android:text="@string/i_didnot_receive_a_code"
        android:textColor="#5C5959">

    </TextView>

    <TextView
        android:id="@+id/please_resend_Txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/semi_bold"
        android:layout_gravity="center"
        android:layout_marginTop="3dp"

        android:textStyle="bold"
        android:text="@string/please_resend"
        android:textColor="@color/colorPrimary"></TextView>


    <TextView
        android:id="@+id/verify_otp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_primary_colour"
        android:gravity="center"
        android:layout_gravity="center"
        android:padding="15dp"
        android:text="@string/verify_otp"
        android:textColor="@color/white"
        android:textStyle="bold"></TextView>


</LinearLayout>