<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_gravity="center"
    android:layout_marginRight="20dp"
    android:layout_marginLeft="20dp"
    android:orientation="vertical"
    tools:context=".Activity.Edit_Profile_Activity">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_gravity="center"
        android:layout_marginTop="-50dp"
        android:layout_marginBottom="-40dp"


        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/back_edit_profile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-60dp"
            android:layout_marginTop="23dp"
            android:src="@drawable/ic_back_back_otp">

        </ImageView>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="@string/edit_profile"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold">

        </TextView>




    </RelativeLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/full_name"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:background="@drawable/full_rounded_grad_with_transparent_background">

        <EditText
            android:id="@+id/full_name_ET"
            android:layout_width="match_parent"


            android:layout_height="30dp"
            android:background="@android:color/transparent"

            android:inputType="textPassword"

            android:textSize="@dimen/text_size_normal"></EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:text="@string/email"></TextView>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"

        android:background="@drawable/full_rounded_grad_with_transparent_background">

        <EditText
            android:id="@+id/email_ET"
            android:layout_width="match_parent"


            android:layout_height="30dp"
            android:background="@android:color/transparent"

            android:inputType="textPassword"

            android:textSize="@dimen/text_size_normal"></EditText>
    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/save_Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="50dp"
        android:background="@drawable/rounded_corner_primary_colour"
        android:gravity="center"
        android:padding="15dp"
        android:text="@string/save"
        android:textColor="@color/white"></Button>

</LinearLayout>
