<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activity.SignUpActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-5dp"
            android:layout_marginTop="-99dp"
            android:src="@drawable/circle_big"></ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="-46dp"
            android:layout_marginTop="-21dp"
            android:src="@drawable/circle_small">


        </ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="300dp"
            android:layout_marginTop="-90dp"

            android:layout_marginRight="-108dp"
            android:src="@drawable/circle_dark"></ImageView>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginLeft="140dp"
            android:layout_marginTop="20dp"
            android:src="@drawable/small_ohh">

        </ImageView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"

        android:elevation="0dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="30dp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="20dp"

            android:text="@string/username"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/full_rounded_grad_with_transparent_background"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/firstNameET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:textColor="@color/black"

                android:textSize="@dimen/text_size_normal"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"

            android:text="@string/email"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/full_rounded_grad_with_transparent_background"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/emailET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textEmailAddress"

                android:textColor="@color/black"

                android:textSize="@dimen/text_size_normal"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="@string/password"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/full_rounded_grad_with_transparent_background"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"
            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/passwordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"

                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="@string/confirm_password"></TextView>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/full_rounded_grad_with_transparent_background"
            android:paddingLeft="15dp"
            android:paddingTop="5dp"
            android:paddingRight="15dp"

            android:paddingBottom="15dp">

            <EditText
                android:id="@+id/confirmPasswordET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:inputType="textPassword"

                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"></EditText>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"

            android:text="@string/Mobile"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/pinCodeTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@drawable/full_rounded_grad_with_transparent_background"

                android:enabled="false"
                android:hint="+965"
                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal">

            </EditText>

            <EditText
                android:id="@+id/mobileET"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:background="@drawable/full_rounded_grad_with_transparent_background"
                android:imeOptions="actionDone"
                android:inputType="number"

                android:padding="15dp"
                android:textColor="@color/black"
                android:textSize="@dimen/text_size_normal"></EditText>
        </LinearLayout>

        <!--            <CheckBox-->
        <!--                android:layout_width="match_parent"-->
        <!--                android:layout_height="wrap_content"-->
        <!--                android:layout_marginLeft="10dp"-->
        <!--                android:layout_marginRight="10dp"-->
        <!--                android:layout_marginBottom="10dp"-->
        <!--                android:orientation="horizontal"-->
        <!--                android:text="@string/terms">-->

        <!--            </CheckBox>-->

        <Button
            android:id="@+id/sign_up_Btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="50dp"
            android:background="@drawable/rounded_corner_primary_colour"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/sign_up"
            android:textColor="@color/white"></Button>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/alredy_have_an_accounnt"></TextView>

            <TextView
                android:id="@+id/sign_up_Txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/login"
                android:textColor="@color/colorPrimary"></TextView>


        </LinearLayout>


    </LinearLayout>
</LinearLayout>
